# bitbucket_mcp

./: .gitignore  .rubocop.yml  AGENTS.md  LICENSE  README.md  bitbucket_mcp.gemspec  pyproject.toml
.github/workflows/: ci.yml
exe/: bitbucket-mcp
lib/: bitbucket_mcp.rb
lib/bitbucket_mcp/: client.rb  errors.rb  schema.rb  server.rb  tool_factory.rb  tools.rb  version.rb
lib/bitbucket_mcp/endpoints/: commits.rb  deployments_downloads_gpg.rb  issues_activity.rb  issues_core.rb  pipelines_core.rb  pipelines_vars.rb  projects.rb  pull_requests.rb  refs_search.rb  repositories.rb  reviewers_branching.rb  snippets.rb  statuses_deploy_keys.rb  users_ssh_hooks.rb  (+1 more)
spec/: client_spec.rb  server_spec.rb  spec_helper.rb
spec/endpoints/: commits_spec.rb  deployments_downloads_gpg_spec.rb  issues_activity_spec.rb  issues_core_spec.rb  pipelines_core_spec.rb  pipelines_vars_spec.rb  projects_spec.rb  pull_requests_spec.rb  refs_search_spec.rb  repositories_spec.rb  reviewers_branching_spec.rb  snippets_spec.rb  statuses_deploy_keys_spec.rb  users_ssh_hooks_spec.rb  workspaces_spec.rb
src/bitbucket_mcp/: server.py
test/: client_test.rb  server_test.rb  test_helper.rb
test/endpoints/: commits_test.rb  deployments_downloads_gpg_test.rb  issues_activity_test.rb  issues_core_test.rb  pipelines_core_test.rb  pipelines_vars_test.rb  projects_test.rb  pull_requests_test.rb  refs_search_test.rb  repositories_test.rb  reviewers_branching_test.rb  snippets_test.rb  statuses_deploy_keys_test.rb  users_ssh_hooks_test.rb  workspaces_test.rb
tests/: test_client.py  test_server.py
(+16 files in other folders)
