[project]
name = "bitbucket-mcp"
version = "0.1.0"
description = "MCP server exposing the Bitbucket Cloud REST API to any MCP-compatible client."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0",
    "python-dotenv>=1.0",
]

[project.scripts]
bitbucket_mcp = "bitbucket_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bitbucket_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
